--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Writers web",
   "main": "index.js",
   "scripts": {
-    "start": "node run"
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Dunwoody-CWEB-Final-Project-Repository/final-project-repository-JP184#readme",
   "dependencies": {
+    "bootstrap": "^5.0.0-beta2",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "node": "^15.8.0",
     "uniq": "^1.0.1"
