--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Writers web",
   "main": "index.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
