--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Dunwoody-CWEB-Final-Project-Repository/final-project-repository-JP184.git"
+    "url": "git+https://github.com/JP184/writersc.git"
   },
   "author": "Randy Chan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Dunwoody-CWEB-Final-Project-Repository/final-project-repository-JP184/issues"
+    "url": "https://github.com/JP184/writersc.git/issues"
   },
-  "homepage": "https://github.com/Dunwoody-CWEB-Final-Project-Repository/final-project-repository-JP184#readme",
+  "homepage": "https://github.com/JP184/writersc.git#readme",
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
     "ejs": "^3.1.6",
