--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-generator": "^4.16.1",
+    "express-promise-router": "^4.1.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
