--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/JP184/writersc.git#readme",
   "dependencies": {
+    "@editorjs/editorjs": "^2.21.0",
+    "@editorjs/header": "^2.6.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta2",
